yet another refactor
